--- a/Space Invaders/My Project/Resources.resx
+++ b/Space Invaders/My Project/Resources.resx
@@ -127,4 +127,7 @@
   <data name="help background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\help background.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shooting screen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shooting screen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
