--- a/Space Invaders/My Project/Resources.resx
+++ b/Space Invaders/My Project/Resources.resx
@@ -208,4 +208,7 @@
   <data name="playerYellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\playerYellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gameOver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Determination.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
